<resources>
    <string name="app_name">SMS</string>

    <!--Login-->
    <string name="clientId">Client Id</string>
    <string name="usernames">UserName/EmailId</string>
    <string name="dob">D.O.B (dd/mm/yyyy)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="openAccountNow">Open Account Now</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="loginFooter">NSE/BSE CM CD FO: INZ000018531\nDP Id: IN-DP-116-2015 | AMFI : ARN- 110016</string>

    <!--SignUp-->
    <string name="username">User name</string>
    <string name="emailId">Email Id</string>
    <string name="visitBackofficeApp">Visit Backoffice App</string>
    <string name="loginAsGuest">Login As Guest</string>

    <!--Change Password-->
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="set_new_password">Set New Password</string>
    <string name="greetings">Greetings,\u0020</string>

    <!--Forgot Password-->
    <string name="userId">User Id</string>
    <string name="enterRegisteredMobileNo.">Enter Regitered Mobile No.</string>
    <string name="loginNow">Login Now</string>

    <!--Pin or FingerPrint Verification-->
    <string name="if_have_another_account">Have another account?\u0020</string>
    <string name="click_here">Click here</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="or">Or</string>
    <string name="place_your_fingertip">Please place your fingertip on the scanner to verify pin</string>

    <string name="verify_pin">Verify Pin</string>
    <string name="set_pin">Set Pin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="search_title">Search</string>

    <string name="login_to_trade">Login to trade</string>
    <string name="portfolio">Portfolio</string>
    <string name="favourites">Favourites</string>
    <string name="mutual_funds">Mutual Funds</string>
    <string name="alerts">Alerts</string>
    <string name="bulk_order">Bulk Order</string>
    <string name="open_an_account">Open An Account</string>

    <string name="market">Hot Stocks</string>
    <string name="movers">Movers</string>
    <string name="upcoming">Upcoming</string>
    <string name="trending">Trending</string>
    <string name="deals">Deals</string>
    <string name="calendar">Calendar</string>

    <string name="research">Research</string>
    <string name="intraday">Intraday</string>
    <string name="short_term">Short Trem</string>
    <string name="investment_idea">Investment Idea</string>

    <string name="news">News</string>
    <string name="reports">Reports</string>

    <string name="tools">Market Tracker</string>
    <string name="earning_calendar">Earning Calendar</string>
    <string name="stock_screen">Stock Screen</string>
    <string name="economy_monitor">Economy Monitor</string>

    <string name="more">More</string>
    <string name="feedback">Feedback</string>
    <string name="privacy">Privacy</string>
    <string name="links">Links</string>

    <string name="support">Support</string>
    <string name="blog">Blog</string>
    <string name="forum">Forum</string>
    <string name="chat">Chat</string>

    <string name="others">Others</string>
    <string name="world_market">World Market</string>
    <string name="option_strategies">Option Strategies</string>
    <string name="trade_guide_signal">Trade Guide Signal</string>

    <string name="welcome">Welcome,\u0020</string>

    <string name="nifty">NIFTY</string>
    <string name="sensex">SENSEX</string>

    <string name="buy">Buy</string>
    <string name="chart">Chart</string>
    <string name="info">Info</string>
    <string name="sell">Sell</string>

    <string name="overview">Overview</string>
    <string name="equity">Equity</string>
    <string name="derivatives">Derivatives</string>
    <string name="indices">Indices</string>
    <string name="currency">Currency</string>
    <string name="ipo">IPO</string>
    <string name="mf">MF</string>
    <string name="bonds">Bonds</string>
    <string name="etf">ETF</string>

    <string name="futures">Futures</string>
    <string name="options">Options</string>
    <string name="technical">Technical</string>
    <string name="fundamental">Fundamental</string>
    <string name="comments">Comments</string>
    <string name="events">Events</string>
    <string name="peers">Peers</string>
    <string name="results">Results</string>
    <string name="share_holding">Share Holding</string>
    <string name="cv">CV</string>

    <string name="less">Less</string>

    <string name="bid">BID:\u0020</string>
    <string name="ask">ASK:\u0020</string>

    <string name="bid1">BID\u0020</string>
    <string name="ask1">ASK\u0020</string>

    <string name="open">Open :\u0020</string>
    <string name="high">High :\u0020</string>
    <string name="low">Low :\u0020</string>
    <string name="pclose">P.Close :\u0020</string>
    <string name="circuit">Circuit :\u0020</string>
    <string name="vol">Vol (\'000) :\u0020</string>
    <string name="f2wh">52W H :\u0020</string>
    <string name="f2wl">52W L :\u0020</string>
    <string name="market_cap">Market Cap (Cr) :\u0020</string>
    <string name="lot_size">Lot Size :\u0020</string>
    <string name="book_value">Book Value :\u0020</string>
    <string name="pb">P/B :\u0020</string>
    <string name="face_value">Face Value :\u0020</string>
    <string name="sector">Sector :\u0020</string>

    <string name="open_interest">Open Interest :\u0020</string>
    <string name="volume">Volume :\u0020</string>

    <string name="debt">Debt :</string>

    <string name="order">Order</string>
    <string name="order_type">Order type</string>
    <string name="validity">Validity</string>
    <string name="product">Product</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>

    <string name="enter_disclose_qty">Enter disclose qty</string>
    <string name="enter_trigger_price_text">Enter trigger price</string>
    <string name="stoploss">Stoploss</string>

    <string-array name="Order_Type">
        <item name="market">Market</item>
        <item name="limit">Limit</item>
        <item name="stop_limit">Stop Limit</item>
    </string-array>

    <string-array name="Validity">
        <item name="ioc">IOC</item>
        <item name="day">Day</item>
    </string-array>

    <string-array name="Product">
        <item name="intraday">Intraday</item>
        <item name="delivery">Delivery</item>
    </string-array>

    <string-array name="DefaultOrderType">
        <item name="intraday">Intraday</item>
        <item name="delivery">Delivery</item>
    </string-array>

    <string-array name="DefaultPrice">
        <item name="intraday">Intraday</item>
        <item name="delivery">Delivery</item>
    </string-array>

    <string name="fill_up_your_feedback">Fill up your feedback</string>
    <string name="service">Service</string>
    <string name="technology">Technology</string>

    <string name="suggestions">Suggestions</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>

    <string name="orders_report">Orders</string>
    <string name="open_report">Open</string>
    <string name="closed_report">Closed</string>
    <string name="cancelled_report">Cancelled</string>

    <string name="add_money">Add Money</string>
    <string name="withdraw">Withdraw</string>
    <string name="add">Add</string>
    <string name="ledger_balance">Ledger Balance</string>
    <string name="free_cash">Free Cash :</string>
    <string name="margin_used">Margin Used :</string>
    <string name="booked_profit">Booked Profit :</string>
    <string name="unrealised_profit">Unrealised Profit :</string>

    <string name="exchange_messages">Exchange Messages</string>
    <string name="broker_messages">Broker Messages</string>
    <string name="corporate_actions">Corporate Actions</string>
    <string name="hold">Hold</string>

    <string name="hourly">Hourly</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="five_min">5 Min</string>
    <string name="one_min">1 Min</string>

    <string name="summary">Summary</string>
    <string name="moving_averages">Moving\nAverages</string>
    <string name="technical_averages">Technical\nAverages</string>
    <string name="positions">Positions</string>


    <string name="volume_shoker">Volume Shoker</string>
    <string name="ftwh">52W High</string>
    <string name="ftwl">52W Low</string>
    <string name="gainers">Gainers</string>
    <string name="loosers">Loosers</string>
    <string name="only_sellers">Only Sellers</string>
    <string name="only_buyers">Only Buyers</string>

    <string name="search_hint">Search</string>

    <string name="all">All</string>
    <string name="stocks">Stocks</string>
    <string name="funds">Funds</string>
    <string name="blogs">Blogs</string>

    <string name="enter_scrip_code">enter_scrip_code</string>
    <string name="enter_script_name">enter_script_name</string>
    <string name="alert_limit_price">alert_limit_price</string>
    <string name="alert_rate_format">alert_rate_format</string>
    <string name="alert_lotsize">alert_lotsize</string>
    <string name="alert_price_ticksize">alert_price_ticksize</string>
    <string name="alert_daily_price">alert_daily_price</string>
    <string name="alert_invalid_order_qty">alert_invalid_order_qty</string>
    <string name="alert_quantity_format">alert_quantity_format</string>
    <string name="alert_max_order_qty">alert_max_order_qty</string>
    <string name="alert_market_order">alert_market_order</string>
    <string name="alert_bsesl_order">alert_bsesl_order</string>
    <string name="alert_bse_limit_order">alert_bse_limit_order</string>
    <string name="trigger_price_format">trigger_price_format</string>
    <string name="enter_trigger_price">enter_trigger_price</string>
    <string name="alert_trigger_price_tickrange">alert_trigger_price_tickrange</string>
    <string name="alert_buy_order">alert_buy_order</string>
    <string name="alert_sell_order">alert_sell_order</string>

    <!--Dialog strings constatnts-->
    <string name="ok">ok</string>
    <string name="message">message</string>
    <string name="internet_failure">internet_failure</string>

    <string name="announcement">When we run above program in android studio we will get the result like as shown below</string>
    <string name="title_activity_clubhouse">Clubhouse</string>
</resources>
