<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ChangePassword.ChangePasswordFragments.ChangePasswordMidFragment">

    <include layout="@layout/greetings_layout" />

    <FrameLayout
        style="@style/LoginIconAndEditTextFrameLayoutStyle"
        android:layout_marginTop="22dp">
        <!--icon-->
        <ImageView style="@style/PasswordIconStyle" />

        <EditText
            android:id="@+id/current_password_edittext"
            style="@style/LoginEditTextStyle"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:maxLength="12" />

    </FrameLayout>

    <FrameLayout style="@style/ExtendedLoginIconAndEditTextFrameLayoutStyle">
        <!--icon-->
        <ImageView style="@style/PasswordIconStyle" />

        <EditText
            android:id="@+id/new_password_edittext"
            style="@style/LoginEditTextStyle"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLength="12" />

    </FrameLayout>

    <FrameLayout style="@style/ExtendedLoginIconAndEditTextFrameLayoutStyle">
        <!--icon-->
        <ImageView style="@style/PasswordIconStyle" />

        <EditText
            android:id="@+id/confirm_new_password_edittext"
            style="@style/LoginEditTextStyle"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:maxLength="12" />

    </FrameLayout>

    <Button
        android:id="@+id/set_new_password_button"
        style="@style/LoginButtonStyle"
        android:text="@string/set_new_password" />

</LinearLayout>