<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Login.ForgotPasswordFragments.ForgotPasswordMidFragment">

    <FrameLayout style="@style/LoginIconAndEditTextFrameLayoutStyle">
        <!--icon-->
        <ImageView style="@style/IdIconStyle" />

        <EditText
            android:id="@+id/emailid_edittext"
            style="@style/LoginEditTextStyle"
            android:hint="@string/emailId" />

    </FrameLayout>

    <TextView
        style="@style/ExtendedLoginFooterTextViewStyle"
        android:layout_marginTop="@dimen/enterPinMarginBottom"
        android:text="@string/or" />

    <FrameLayout style="@style/LoginIconAndEditTextFrameLayoutStyle">
        <!--icon-->
        <ImageView style="@style/MobileIconStyle" />

        <EditText
            android:id="@+id/enter_registered_mobile_no_edittext"
            style="@style/LoginEditTextStyle"
            android:hint="@string/enterRegisteredMobileNo." />

    </FrameLayout>

    <Button
        android:id="@+id/forgot_password_button"
        style="@style/LoginButtonStyle"
        android:text="@string/forgotPassword" />

</LinearLayout>